Add clock and FutureEventList from example

--- a/SpaceMissionDES/proto-01.ipynb
+++ b/SpaceMissionDES/proto-01.ipynb
@@ -2,14 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataclasses import dataclass\n",
+    "from dataclasses import dataclass, field\n",
+    "from heapq import heappush, heappop\n",
+    "from pprint import pprint # pretty-printing basic data structures\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "CLOCK = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current simulation time is 0 o'clock.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# https://stackoverflow.com/questions/279561/what-is-the-python-equivalent-of-static-variables-inside-a-function\n",
+    "def static_vars(**kwargs):\n",
+    "    def decorate(func):\n",
+    "        for k in kwargs:\n",
+    "            setattr(func, k, kwargs[k])\n",
+    "        return func\n",
+    "    return decorate\n",
+    "\n",
+    "@static_vars(t=0)\n",
+    "def now():\n",
+    "    return now.t\n",
+    "\n",
+    "def set_time(t_new=0):\n",
+    "    now.t = t_new\n",
+    "    return now()\n",
+    "\n",
+    "print(\"The current simulation time is\", now(), \"o'clock.\")"
    ]
   },
   {
@@ -21,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,10 +72,10 @@
     "class Event:\n",
     "    name: str\n",
     "\n",
-    "@dataclass \n",
+    "@dataclass(order=True)\n",
     "class EventInstance:\n",
-    "    name: str\n",
-    "    parent: Event\n",
+    "    name: str=field(compare=False)\n",
+    "    parent: Event=field(compare=False)\n",
     "    time: float"
    ]
   },
@@ -45,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,12 +108,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Future Event List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Implement the FutureEventList from Prof. Vuduc's example\n",
+    "class FutureEventList:\n",
+    "    def __init__(self):\n",
+    "        self.events = []\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self) -> Event:\n",
+    "        from heapq import heappop\n",
+    "        if self.events:\n",
+    "            return heappop(self.events)\n",
+    "        raise StopIteration\n",
+    "    \n",
+    "    def __repr__(self) -> str:\n",
+    "        from pprint import pformat\n",
+    "        return pformat(self.events)\n",
+    "\n",
+    "    def schedule(self, activity: Activity) -> None:\n",
+    "        heappush(\n",
+    "            self.events,\n",
+    "            EventInstance(activity.end.name, activity.end, now() + activity.duration)\n",
+    "        )\n",
+    "\n",
+    "    def get_next(self):\n",
+    "        return heappop(self.events)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Vehicles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,23 +183,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "INIT = Event(\"INIT\")\n",
-    "liftoff = Event(\"Liftoff\")\n",
-    "stage = Event(\"Stage\")\n",
-    "orbit = Event(\"Orbit\")\n",
     "\n",
-    "# @dataclass\n",
+    "\n",
+    "@dataclass\n",
     "class ConOps:\n",
-    "\n",
-    "    sequence = {\n",
-    "        INIT.name: Activity(\"waiting\", INIT, liftoff, 0),\n",
-    "        liftoff.name: Activity(\"s1_ascent\", liftoff, stage, 10),\n",
-    "        stage.name: Activity(\"s2_ascent\", stage, orbit, 10)\n",
-    "    }\n",
+    "    sequence: dict\n",
     "\n",
     "    def first(self):\n",
     "        return self.sequence[\"INIT\"]\n",
@@ -126,21 +202,71 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def schedule(activity, future_events):\n",
-    "    end = activity.end\n",
-    "    future_events.append(\n",
-    "        EventInstance(end.name, end, CLOCK + v.activity.duration)\n",
-    "    )"
+    "First define the ConOps as a sequence of processes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Events\n",
+    "INIT = Event(\"INIT\")\n",
+    "liftoff = Event(\"Liftoff\")\n",
+    "stage = Event(\"Stage\")\n",
+    "orbit = Event(\"Orbit\")\n",
+    "\n",
+    "# Activities\n",
+    "activities = {\n",
+    "    INIT.name: Activity(\"waiting\", INIT, liftoff, 0),\n",
+    "    liftoff.name: Activity(\"s1_ascent\", liftoff, stage, 10),\n",
+    "    stage.name: Activity(\"s2_ascent\", stage, orbit, 10)\n",
+    "}\n",
+    "\n",
+    "conops = ConOps(activities)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialize the Simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reset the clock\n",
+    "set_time(0)\n",
+    "\n",
+    "# Create and empty events list\n",
+    "future = FutureEventList()\n",
+    "\n",
+    "# Start a vehicle\n",
+    "v = start_vehicle(\"LV1\", conops)\n",
+    "\n",
+    "# Vehicle starts in some activity, which will end when that activities event is processed\n",
+    "current_activity = v.activity\n",
+    "future.schedule(v.activity)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Walk the events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -208,27 +334,14 @@
        "2  Activity(name='s1_ascent', start=Event(name='L...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "CLOCK = 0\n",
-    "future_events = []\n",
-    "\n",
-    "conops = ConOps()\n",
-    "\n",
-    "# Start with some intial state\n",
-    "v = start_vehicle(\"LV1\", conops)\n",
-    "\n",
-    "# Vehicle starts in some activity, which will end when that activities event is processed\n",
-    "current_activity = v.activity\n",
-    "schedule(v.activity, future_events)\n",
-    "\n",
     "# Trigger the ending event\n",
-    "current_event = future_events[0]\n",
-    "future_events.remove(current_event)\n",
+    "current_event = future.get_next()\n",
     "\n",
     "# Process the event\n",
     "# - Update the system state\n",
@@ -246,8 +359,8 @@
     "v.activity = next_activity\n",
     "\n",
     "# Schedule the next event\n",
-    "schedule(v.activity, future_events)\n",
-    "future_events\n",
+    "future.schedule(v.activity)\n",
+    "future\n",
     "\n",
     "assert current_event.parent == next_activity.start\n",
     "\n",
@@ -262,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
