--- a/SpaceMissionDES/proto-01.ipynb
+++ b/SpaceMissionDES/proto-01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,9 +10,7 @@
     "from heapq import heappush, heappop\n",
     "from pprint import pprint # pretty-printing basic data structures\n",
     "\n",
-    "import pandas as pd\n",
-    "\n",
-    "CLOCK = 0"
+    "import pandas as pd"
    ]
   },
   {
@@ -24,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -64,19 +62,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
     "@dataclass\n",
     "class Event:\n",
-    "    name: str\n",
-    "\n",
-    "@dataclass(order=True)\n",
-    "class EventInstance:\n",
-    "    name: str=field(compare=False)\n",
-    "    parent: Event=field(compare=False)\n",
-    "    time: float"
+    "    name: str"
    ]
   },
   {
@@ -88,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,12 +100,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Future Event List"
+    "Vehicles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 280,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class Vehicle:\n",
+    "    name: str\n",
+    "    activity: Activity\n",
+    "    propload: float\n",
+    "    trace: pd.DataFrame = pd.DataFrame(columns=['CurrentEvent', 'NextEvent', 'Prop', 'Activity'])\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return (f'{self.__class__.__name__} - {self.name}')\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def initialize(name, conops, propload = 100):\n",
+    "        v = Vehicle(name, conops.first(), propload)\n",
+    "        v.update_trace()\n",
+    "        return v\n",
+    "\n",
+    "    def schedule_next_event(self, future_event_list):\n",
+    "        template = self.activity.end\n",
+    "        name = self.activity.end.name\n",
+    "        heappush(\n",
+    "            future_event_list.events,\n",
+    "            ScheduledEvent(name, template, self, now() + self.activity.duration)\n",
+    "        )\n",
+    "\n",
+    "    def update_trace(self):\n",
+    "        self.trace = pd.concat([\n",
+    "            self.trace,\n",
+    "            pd.DataFrame({\n",
+    "                \"CurrentEvent\": self.activity.start, \n",
+    "                \"NextEvent\": self.activity.end, \n",
+    "                \"Prop\": self.propload, \n",
+    "                \"Activity\": self.activity}, index = [len(self.trace) + 1])\n",
+    "        ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Future Events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass(order=True)\n",
+    "class ScheduledEvent:\n",
+    "    name: str=field(compare=False)\n",
+    "    template: Event=field(compare=False)\n",
+    "    vehicle: Vehicle=field(compare=False)\n",
+    "    time: float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,12 +189,6 @@
     "        from pprint import pformat\n",
     "        return pformat(self.events)\n",
     "\n",
-    "    def schedule(self, activity: Activity) -> None:\n",
-    "        heappush(\n",
-    "            self.events,\n",
-    "            EventInstance(activity.end.name, activity.end, now() + activity.duration)\n",
-    "        )\n",
-    "\n",
     "    def get_next(self):\n",
     "        return heappop(self.events)"
    ]
@@ -149,46 +197,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vehicles"
+    "ConOps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@dataclass\n",
-    "class Vehicle:\n",
-    "    name: str\n",
-    "    activity: Activity\n",
-    "    propload: float\n",
-    "    trace: pd.DataFrame = pd.DataFrame(columns=['CurrentEvent', 'NextEvent', 'Prop', 'Activity'])\n",
-    "\n",
-    "def start_vehicle(name, conops, propload = 100):\n",
-    "    v = Vehicle(name, conops.first(), propload)\n",
-    "    v.trace = pd.concat([\n",
-    "        v.trace,\n",
-    "        pd.DataFrame({\"CurrentEvent\": v.activity.start, \"NextEvent\": v.activity.end, \"Prop\": v.propload, \"Activity\": v.activity}, index = [len(v.trace) + 1])\n",
-    "    ])\n",
-    "    return v"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Process Pseudocode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
     "@dataclass\n",
     "class ConOps:\n",
     "    sequence: dict\n",
@@ -205,12 +222,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Process Example 01"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "First define the ConOps as a sequence of processes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,11 +274,10 @@
     "future = FutureEventList()\n",
     "\n",
     "# Start a vehicle\n",
-    "v = start_vehicle(\"LV1\", conops)\n",
+    "current_vehicle = Vehicle.initialize(\"LV1\", conops)\n",
     "\n",
     "# Vehicle starts in some activity, which will end when that activities event is processed\n",
-    "current_activity = v.activity\n",
-    "future.schedule(v.activity)"
+    "current_vehicle.schedule_next_event(future)"
    ]
   },
   {
@@ -266,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +297,7 @@
      "output_type": "stream",
      "text": [
       "The current activity is Activity(name='waiting', start=Event(name='INIT'), end=Event(name='Liftoff'), duration=0)\n",
-      "The current event is EventInstance(name='Liftoff', parent=Event(name='Liftoff'), time=0)\n",
+      "The current event is ScheduledEvent(name='Liftoff', template=Event(name='Liftoff'), vehicle=Vehicle - LV1, time=0)\n",
       "The next activity is Activity(name='s1_ascent', start=Event(name='Liftoff'), end=Event(name='Stage'), duration=10)\n"
      ]
     },
@@ -334,7 +357,7 @@
        "2  Activity(name='s1_ascent', start=Event(name='L...  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,44 +374,303 @@
     "# Get the next activity\n",
     "next_activity = conops.after(current_event)\n",
     "\n",
-    "print(f\"The current activity is {current_activity}\")\n",
+    "print(f\"The current activity is {current_vehicle.activity}\")\n",
     "print(f\"The current event is {current_event}\")\n",
     "print(f\"The next activity is {next_activity}\")\n",
     "\n",
     "# - Change the activity\n",
-    "v.activity = next_activity\n",
+    "current_vehicle.activity = next_activity\n",
     "\n",
     "# Schedule the next event\n",
-    "future.schedule(v.activity)\n",
-    "future\n",
+    "current_vehicle.schedule_next_event(future)\n",
     "\n",
-    "assert current_event.parent == next_activity.start\n",
+    "assert current_event.template == next_activity.start\n",
     "\n",
     "# - Update the vehicle trace\n",
-    "v.trace = pd.concat([\n",
-    "    v.trace,\n",
-    "    pd.DataFrame({\"CurrentEvent\": v.activity.start, \"NextEvent\": v.activity.end, \"Prop\": v.propload, \"Activity\": v.activity}, index = [len(v.trace) + 1])\n",
-    "])\n",
+    "current_vehicle.update_trace()\n",
     "\n",
-    "v.trace"
+    "current_vehicle.trace"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Process Example 02"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First define the ConOps as a sequence of processes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# activities = {\n",
-    "#     \"waiting\": [v],\n",
-    "#     \"s1_ascent\": [],\n",
-    "#     \"s2_Ascent\": [],\n",
-    "#     \"done\": [],\n",
-    "# }\n",
+    "# Events\n",
+    "INIT = Event(\"INIT\")\n",
+    "liftoff = Event(\"Liftoff\")\n",
+    "stage = Event(\"Stage\")\n",
+    "orbit = Event(\"Orbit\")\n",
     "\n",
-    "# # - Update the system state\n",
-    "# activities[prev_activity.name].remove(v)\n",
-    "# activities[next_activity.name].append(v)"
+    "DONE = Event(\"Done\")\n",
+    "\n",
+    "# Activities\n",
+    "activities = {\n",
+    "    INIT.name: Activity(\"waiting\", INIT, liftoff, 0),\n",
+    "    liftoff.name: Activity(\"s1_ascent\", liftoff, stage, 10),\n",
+    "    stage.name: Activity(\"s2_ascent\", stage, orbit, 10),\n",
+    "    orbit.name: Activity(\"insertion\", orbit, DONE, 5)\n",
+    "}\n",
+    "\n",
+    "conops = ConOps(activities)\n",
+    "\n",
+    "system_state = {\n",
+    "    activity.name: [] for activity in conops.sequence.values()\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialize the Simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'waiting': [Vehicle - LV1], 's1_ascent': [], 's2_ascent': [], 'insertion': []}"
+      ]
+     },
+     "execution_count": 302,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reset the clock\n",
+    "set_time(0)\n",
+    "\n",
+    "# Create and empty events list\n",
+    "future = FutureEventList()\n",
+    "\n",
+    "# Start a vehicle\n",
+    "current_vehicle = Vehicle.initialize(\"LV1\", conops)\n",
+    "\n",
+    "# Vehicle starts in some activity, which will end when that activities event is processed\n",
+    "current_vehicle.schedule_next_event(future)\n",
+    "\n",
+    "system_state[current_vehicle.activity.name].append(current_vehicle)\n",
+    "\n",
+    "system_state  # update the system state trace here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loop over events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "********************\n",
+      "* BEGIN SIMULATION *\n",
+      "********************\n",
+      "\n",
+      "Time is 0\n",
+      "\tThe previous activity was waiting\n",
+      "\tThe current event is Liftoff\n",
+      "\tThe next activity is s1_ascent\n",
+      "\n",
+      "Time is 10\n",
+      "\tThe previous activity was s1_ascent\n",
+      "\tThe current event is Stage\n",
+      "\tThe next activity is s2_ascent\n",
+      "\n",
+      "Time is 20\n",
+      "\tThe previous activity was s2_ascent\n",
+      "\tThe current event is Orbit\n",
+      "\tThe next activity is insertion\n",
+      "\n",
+      "Time is 25\n",
+      "\n",
+      "******************\n",
+      "* END SIMULATION *\n",
+      "******************\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n\\n********************\\n* BEGIN SIMULATION *\\n********************\\n\")\n",
+    "\n",
+    "for event in future:\n",
+    "\n",
+    "    # Update the simulation clock\n",
+    "    set_time(event.time)\n",
+    "\n",
+    "    if event.template is DONE:\n",
+    "        system_state[event.vehicle.activity.name].remove(vehicle)\n",
+    "        print(f\"Time is {now()}\")\n",
+    "        print(\"\\n******************\\n* END SIMULATION *\\n******************\")\n",
+    "        break\n",
+    "\n",
+    "    # Transfer control to the vehicle process\n",
+    "    vehicle = event.vehicle\n",
+    "\n",
+    "    # Process the event\n",
+    "\n",
+    "    # - Update the vehicle state\n",
+    "    vehicle.propload -= 60  #TODO: Add proper logic for propellant updates\n",
+    "\n",
+    "    # Get the next activity & update the vehilce\n",
+    "    previous_activity = vehicle.activity\n",
+    "    vehicle.activity = conops.after(event)\n",
+    "\n",
+    "    # - Update the vehicle trace\n",
+    "    vehicle.update_trace()\n",
+    "\n",
+    "    print(f\"Time is {now()}\")\n",
+    "    print(f\"\\tThe previous activity was {previous_activity.name}\")\n",
+    "    print(f\"\\tThe current event is {event.name}\")\n",
+    "    print(f\"\\tThe next activity is {vehicle.activity.name}\\n\")\n",
+    "\n",
+    "    # Update the system state\n",
+    "    system_state[previous_activity.name].remove(vehicle)\n",
+    "    system_state[vehicle.activity.name].append(vehicle)\n",
+    "\n",
+    "    # Schedule the next event\n",
+    "    vehicle.schedule_next_event(future)\n",
+    "\n",
+    "    # Return control to the scheduler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CurrentEvent</th>\n",
+       "      <th>NextEvent</th>\n",
+       "      <th>Prop</th>\n",
+       "      <th>Activity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Event(name='INIT')</td>\n",
+       "      <td>Event(name='Liftoff')</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Activity(name='waiting', start=Event(name='INI...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Event(name='Liftoff')</td>\n",
+       "      <td>Event(name='Stage')</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Activity(name='s1_ascent', start=Event(name='L...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Event(name='Stage')</td>\n",
+       "      <td>Event(name='Orbit')</td>\n",
+       "      <td>-20</td>\n",
+       "      <td>Activity(name='s2_ascent', start=Event(name='S...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Event(name='Orbit')</td>\n",
+       "      <td>Event(name='Done')</td>\n",
+       "      <td>-80</td>\n",
+       "      <td>Activity(name='insertion', start=Event(name='O...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            CurrentEvent              NextEvent Prop  \\\n",
+       "1     Event(name='INIT')  Event(name='Liftoff')  100   \n",
+       "2  Event(name='Liftoff')    Event(name='Stage')   40   \n",
+       "3    Event(name='Stage')    Event(name='Orbit')  -20   \n",
+       "4    Event(name='Orbit')     Event(name='Done')  -80   \n",
+       "\n",
+       "                                            Activity  \n",
+       "1  Activity(name='waiting', start=Event(name='INI...  \n",
+       "2  Activity(name='s1_ascent', start=Event(name='L...  \n",
+       "3  Activity(name='s2_ascent', start=Event(name='S...  \n",
+       "4  Activity(name='insertion', start=Event(name='O...  "
+      ]
+     },
+     "execution_count": 299,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vehicle.trace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'waiting': [], 's1_ascent': [], 's2_ascent': [], 'insertion': []}"
+      ]
+     },
+     "execution_count": 300,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "system_state"
    ]
   },
   {
