Update after group meeing

--- a/SpaceMissionDES/proto-01.ipynb
+++ b/SpaceMissionDES/proto-01.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prototype 01 - Space Mission DES"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +24,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clock"
+    "Simulation Time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,9 +253,9 @@
     "\n",
     "# Activities\n",
     "activities = {\n",
-    "    INIT.name: Activity(\"waiting\", INIT, liftoff, 0),\n",
-    "    liftoff.name: Activity(\"s1_ascent\", liftoff, stage, 10),\n",
-    "    stage.name: Activity(\"s2_ascent\", stage, orbit, 10)\n",
+    "    INIT.name: Activity(\"waiting\", INIT, liftoff, 0),         # Note that each activity has a starting event, ending event, and duration\n",
+    "    liftoff.name: Activity(\"s1_ascent\", liftoff, stage, 10),  # Events are transitions between activities. \n",
+    "    stage.name: Activity(\"s2_ascent\", stage, orbit, 10)       # Ending event for one activity is the starting event for the next\n",
     "}\n",
     "\n",
     "conops = ConOps(activities)"
@@ -263,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,6 +288,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ScheduledEvent(name='Liftoff',\n",
+       "                template=Event(name='Liftoff'),\n",
+       "                vehicle=Vehicle - LV1,\n",
+       "                time=0)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "future"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -289,16 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current activity is Activity(name='waiting', start=Event(name='INIT'), end=Event(name='Liftoff'), duration=0)\n",
-      "The current event is ScheduledEvent(name='Liftoff', template=Event(name='Liftoff'), vehicle=Vehicle - LV1, time=0)\n",
-      "The next activity is Activity(name='s1_ascent', start=Event(name='Liftoff'), end=Event(name='Stage'), duration=10)\n"
+      "The current activity is Activity(name='s1_ascent', start=Event(name='Liftoff'), end=Event(name='Stage'), duration=10)\n",
+      "The current event is ScheduledEvent(name='Stage', template=Event(name='Stage'), vehicle=Vehicle - LV1, time=10)\n",
+      "The next activity is Activity(name='s2_ascent', start=Event(name='Stage'), end=Event(name='Orbit'), duration=10)\n"
      ]
     },
     {
@@ -343,6 +373,13 @@
        "      <td>100</td>\n",
        "      <td>Activity(name='s1_ascent', start=Event(name='L...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Event(name='Stage')</td>\n",
+       "      <td>Event(name='Orbit')</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Activity(name='s2_ascent', start=Event(name='S...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -351,13 +388,15 @@
        "            CurrentEvent              NextEvent Prop  \\\n",
        "1     Event(name='INIT')  Event(name='Liftoff')  100   \n",
        "2  Event(name='Liftoff')    Event(name='Stage')  100   \n",
+       "3    Event(name='Stage')    Event(name='Orbit')  100   \n",
        "\n",
        "                                            Activity  \n",
        "1  Activity(name='waiting', start=Event(name='INI...  \n",
-       "2  Activity(name='s1_ascent', start=Event(name='L...  "
+       "2  Activity(name='s1_ascent', start=Event(name='L...  \n",
+       "3  Activity(name='s2_ascent', start=Event(name='S...  "
       ]
      },
-     "execution_count": 287,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,12 +447,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Events\n",
     "INIT = Event(\"INIT\")\n",
+    "\n",
     "liftoff = Event(\"Liftoff\")\n",
     "stage = Event(\"Stage\")\n",
     "orbit = Event(\"Orbit\")\n",
@@ -436,6 +476,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'waiting': [], 's1_ascent': [], 's2_ascent': [], 'insertion': []}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "system_state"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -444,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +513,7 @@
        "{'waiting': [Vehicle - LV1], 's1_ascent': [], 's2_ascent': [], 'insertion': []}"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -503,16 +563,19 @@
       "\tThe current event is Liftoff\n",
       "\tThe next activity is s1_ascent\n",
       "\n",
+      "\t {'waiting': [Vehicle - LV1], 's1_ascent': [], 's2_ascent': [], 'insertion': []}\n",
       "Time is 10\n",
       "\tThe previous activity was s1_ascent\n",
       "\tThe current event is Stage\n",
       "\tThe next activity is s2_ascent\n",
       "\n",
+      "\t {'waiting': [], 's1_ascent': [Vehicle - LV1], 's2_ascent': [], 'insertion': []}\n",
       "Time is 20\n",
       "\tThe previous activity was s2_ascent\n",
       "\tThe current event is Orbit\n",
       "\tThe next activity is insertion\n",
       "\n",
+      "\t {'waiting': [], 's1_ascent': [], 's2_ascent': [Vehicle - LV1], 'insertion': []}\n",
       "Time is 25\n",
       "\n",
       "******************\n",
@@ -554,6 +617,7 @@
     "    print(f\"\\tThe previous activity was {previous_activity.name}\")\n",
     "    print(f\"\\tThe current event is {event.name}\")\n",
     "    print(f\"\\tThe next activity is {vehicle.activity.name}\\n\")\n",
+    "    print(f\"\\t {system_state}\")\n",
     "\n",
     "    # Update the system state\n",
     "    system_state[previous_activity.name].remove(vehicle)\n",
@@ -567,7 +631,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'waiting': [], 's1_ascent': [], 's2_ascent': [], 'insertion': []}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "system_state\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +728,7 @@
        "4  Activity(name='insertion', start=Event(name='O...  "
       ]
      },
-     "execution_count": 299,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,30 +739,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'waiting': [], 's1_ascent': [], 's2_ascent': [], 'insertion': []}"
-      ]
-     },
-     "execution_count": 300,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "system_state"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "end Activity\n",
+    "\n",
+    "some event\n",
+    "\n",
+    "    check if state is still viable (i.e. is propellant > 0)\n",
+    "\n",
+    "result = sample()\n",
+    "\n",
+    "if result == success:\n",
+    "    Get next activty from conops\n",
+    "    schedule event that ends Activity\n",
+    "\n",
+    "if result == failure:\n",
+    "\n",
+    "    Get next event from conops\n",
+    "    if event is dead:\n",
+    "        end sim\n",
+    "\n",
+    "    otherwise \n",
+    "        schedule\n",
+    "\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
