--- a/SpaceMissionDES/proto-01.ipynb
+++ b/SpaceMissionDES/proto-01.ipynb
@@ -738,6 +738,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### Some ideas for implementing failures"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
