async demo-02.py is a working toy example

--- a/SpaceMissionDES/demo-coroutines.ipynb
+++ b/SpaceMissionDES/demo-coroutines.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,16 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SpaceEvent(name='liftoff', sync=<asyncio.locks.Event object at 0x11257b880 [unset]>)"
+       "SpaceEvent(name='liftoff', sync=<asyncio.locks.Event object at 0x1065b1a50 [unset]>)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,26 +126,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<Task pending name='Task-5' coro=<ascent() running at /var/folders/d4/714vzybx28lcn2xx4n__4n8m0000gp/T/ipykernel_72639/1073127561.py:1> cb=[Simulation.update_state()]>]"
+       "Simulation(future=[SpaceEvent(name='stage', sync=<asyncio.locks.Event object at 0x1065b1a50 [unset]>)], active=[<Task pending name='Task-4' coro=<ascent() running at /var/folders/d4/714vzybx28lcn2xx4n__4n8m0000gp/T/ipykernel_89736/1073127561.py:1> cb=[Simulation.update_state()]>], complete=[])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Event liftoff nas occurred\n",
-      "Alpha: Start Ascent\n"
-     ]
     }
    ],
    "source": [
@@ -158,21 +150,13 @@
     "\n",
     "sim.schedule(ascent, liftoff, stage, vehicle)\n",
     "\n",
-    "sim.active"
+    "# sim.active\n",
+    "sim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stage.sync.set()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +165,48 @@
        "[]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Task exception was never retrieved\n",
+      "future: <Task finished name='Task-4' coro=<ascent() done, defined at /var/folders/d4/714vzybx28lcn2xx4n__4n8m0000gp/T/ipykernel_89736/1073127561.py:1> exception=AttributeError(\"'SpaceEvent' object has no attribute 'wait'\")>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/var/folders/d4/714vzybx28lcn2xx4n__4n8m0000gp/T/ipykernel_89736/1073127561.py\", line 5, in ascent\n",
+      "    await event_complete.wait()\n",
+      "AttributeError: 'SpaceEvent' object has no attribute 'wait'\n"
+     ]
+    }
+   ],
+   "source": [
+    "sim.active"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stage.sync.set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,16 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<Task finished name='Task-5' coro=<ascent() done, defined at /var/folders/d4/714vzybx28lcn2xx4n__4n8m0000gp/T/ipykernel_72639/1073127561.py:1> exception=AttributeError(\"'SpaceEvent' object has no attribute 'wait'\")>]"
+       "[<Task finished name='Task-4' coro=<ascent() done, defined at /var/folders/d4/714vzybx28lcn2xx4n__4n8m0000gp/T/ipykernel_89736/1073127561.py:1> exception=AttributeError(\"'SpaceEvent' object has no attribute 'wait'\")>]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,6 +234,20 @@
    "source": [
     "sim.complete"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
