--- a/SpaceMissionDES/thread-experiements/pause-threads.ipynb
+++ b/SpaceMissionDES/thread-experiements/pause-threads.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "42"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "'Task-3'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,18 +184,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{<Task pending name='Task-3' coro=<Kernel.dispatch_queue() running at /Users/ben/.pyenv/versions/3.10.3/envs/SpaceDES/lib/python3.10/site-packages/ipykernel/kernelbase.py:473> cb=[IOLoop.add_future.<locals>.<lambda>() at /Users/ben/.pyenv/versions/3.10.3/envs/SpaceDES/lib/python3.10/site-packages/tornado/ioloop.py:688]>,\n",
-       " <Task pending name='flightA' coro=<fly_mission() running at /var/folders/d4/714vzybx28lcn2xx4n__4n8m0000gp/T/ipykernel_71677/333057138.py:4> wait_for=<Future pending cb=[Task.task_wakeup()]>>,\n",
-       " <Task pending name='flightB' coro=<fly_mission() running at /var/folders/d4/714vzybx28lcn2xx4n__4n8m0000gp/T/ipykernel_71677/333057138.py:4> wait_for=<Future pending cb=[Task.task_wakeup()]>>}"
+       " <Task pending name='flightA' coro=<fly_mission() running at /var/folders/d4/714vzybx28lcn2xx4n__4n8m0000gp/T/ipykernel_48598/333057138.py:4> wait_for=<Future pending cb=[Task.task_wakeup()]>>,\n",
+       " <Task pending name='flightB' coro=<fly_mission() running at /var/folders/d4/714vzybx28lcn2xx4n__4n8m0000gp/T/ipykernel_48598/333057138.py:4> wait_for=<Future pending cb=[Task.task_wakeup()]>>}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -223,17 +223,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vehicle A: I'm done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "end_flightA.set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{<Task pending name='Task-3' coro=<Kernel.dispatch_queue() running at /Users/ben/.pyenv/versions/3.10.3/envs/SpaceDES/lib/python3.10/site-packages/ipykernel/kernelbase.py:473> cb=[IOLoop.add_future.<locals>.<lambda>() at /Users/ben/.pyenv/versions/3.10.3/envs/SpaceDES/lib/python3.10/site-packages/tornado/ioloop.py:688]>,\n",
-       " <Task pending name='flightA' coro=<fly_mission() running at /var/folders/d4/714vzybx28lcn2xx4n__4n8m0000gp/T/ipykernel_71677/333057138.py:4> wait_for=<Future pending cb=[Task.task_wakeup()]>>}"
+       " <Task pending name='flightA' coro=<fly_mission() running at /var/folders/d4/714vzybx28lcn2xx4n__4n8m0000gp/T/ipykernel_48598/333057138.py:4> wait_for=<Future pending cb=[Task.task_wakeup()]>>}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
