Complete parameter sweep

--- a/SpaceMissionDES/analysis/Convergence.ipynb
+++ b/SpaceMissionDES/analysis/Convergence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "DataTransformerRegistry.enable('data_server')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,51 +61,51 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>21.261591</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>56.142403</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>Tanker</td>\n",
+       "      <td>Countdown</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>56.142403</td>\n",
        "      <td>3</td>\n",
-       "      <td>True</td>\n",
-       "      <td>21.261591</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>43.665012</td>\n",
+       "      <td>Tanker</td>\n",
+       "      <td>Countdown</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>56.142403</td>\n",
+       "      <td>4</td>\n",
+       "      <td>56.142403</td>\n",
+       "      <td>Tanker</td>\n",
+       "      <td>Redezvous</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>2</td>\n",
        "      <td>True</td>\n",
-       "      <td>37.210802</td>\n",
+       "      <td>96.627624</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>MTV</td>\n",
        "      <td>Countdown</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6</td>\n",
-       "      <td>True</td>\n",
-       "      <td>21.261591</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>True</td>\n",
-       "      <td>34.210802</td>\n",
        "      <td>2</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>96.627624</td>\n",
+       "      <td>3</td>\n",
+       "      <td>27.165012</td>\n",
        "      <td>Tanker</td>\n",
        "      <td>Countdown</td>\n",
        "    </tr>\n",
@@ -115,27 +115,27 @@
       ],
       "text/plain": [
        "   replicant  outcome   duration  anomaly_count  anomaly_time anomaly_vehicle  \\\n",
-       "0          0     True  21.261591              0           NaN             NaN   \n",
-       "1          3     True  21.261591              0           NaN             NaN   \n",
-       "2          2     True  37.210802              2           0.0             MTV   \n",
-       "3          6     True  21.261591              0           NaN             NaN   \n",
-       "4          4     True  34.210802              2           6.0          Tanker   \n",
+       "0          5    False  56.142403              2      6.000000          Tanker   \n",
+       "1          5    False  56.142403              3     43.665012          Tanker   \n",
+       "2          5    False  56.142403              4     56.142403          Tanker   \n",
+       "3          2     True  96.627624              2      0.000000             MTV   \n",
+       "4          2     True  96.627624              3     27.165012          Tanker   \n",
        "\n",
        "  anomaly_activity  \n",
-       "0              NaN  \n",
-       "1              NaN  \n",
-       "2        Countdown  \n",
-       "3              NaN  \n",
+       "0        Countdown  \n",
+       "1        Countdown  \n",
+       "2        Redezvous  \n",
+       "3        Countdown  \n",
        "4        Countdown  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_dir = Path.cwd().parent.parent / \"results\" / \"Case04-r05__Tx06-Tk06\"\n",
+    "data_dir = Path.cwd().parent.parent / \"results\" / \"Case04-r05__Tx10-Tk08\"\n",
     "\n",
     "mc_results = pd.read_csv(data_dir / \"mc.csv\")\n",
     "mc_results.head()"
@@ -143,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The success rate was: 0.9551955195519551 = 95.520 %\n",
+      "The success rate was: 0.8698116352725455 = 86.981 %\n",
       "\n"
      ]
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,20 +191,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-ce53e4031b5149258daceb4de06fdc0f\"></div>\n",
+       "<div id=\"altair-viz-182627c51f7a4ffe80da0d87420549de\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-ce53e4031b5149258daceb4de06fdc0f\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-ce53e4031b5149258daceb4de06fdc0f\");\n",
+       "    if (outputDiv.id !== \"altair-viz-182627c51f7a4ffe80da0d87420549de\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-182627c51f7a4ffe80da0d87420549de\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -250,14 +250,14 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"url\": \"http://localhost:22990/db3e23cb2b8e85a1d6bba9db53a5af1d.json\"}, \"mark\": \"line\", \"encoding\": {\"x\": {\"field\": \"Replicants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"Success Rate\", \"scale\": {\"domain\": [0.9, 1.0]}, \"type\": \"quantitative\"}}, \"height\": 300, \"width\": 800, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\"}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"url\": \"http://localhost:15397/b42c233d9c833e712e6162acd8e38328.json\"}, \"mark\": \"line\", \"encoding\": {\"x\": {\"field\": \"Replicants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"Success Rate\", \"scale\": {\"domain\": [0.8, 0.9]}, \"type\": \"quantitative\"}}, \"height\": 300, \"width\": 800, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\"}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
    "source": [
     "alt.Chart(df).mark_line().encode(\n",
     "    x = alt.X(\"Replicants\"),\n",
-    "    y = alt.Y(\"Success Rate\", scale=alt.Scale(domain=(0.9, 1.0)))\n",
+    "    y = alt.Y(\"Success Rate\", scale=alt.Scale(domain=(0.8, 0.9)))\n",
     ").properties(\n",
     "    height = 300,\n",
     "    width=800\n",
