--- a/SpaceMissionDES/analysis/Convergence.ipynb
+++ b/SpaceMissionDES/analysis/Convergence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "DataTransformerRegistry.enable('data_server')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -61,52 +61,52 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>False</td>\n",
-       "      <td>56.142403</td>\n",
        "      <td>2</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>Tanker</td>\n",
-       "      <td>Countdown</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>SEP-02 + EOI-MCPS</td>\n",
+       "      <td>Ascent</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "      <td>False</td>\n",
-       "      <td>56.142403</td>\n",
-       "      <td>3</td>\n",
-       "      <td>43.665012</td>\n",
-       "      <td>Tanker</td>\n",
-       "      <td>Countdown</td>\n",
+       "      <td>3111.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3111.0</td>\n",
+       "      <td>MOI-MCPS</td>\n",
+       "      <td>Lunar Insertion</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5</td>\n",
+       "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>56.142403</td>\n",
-       "      <td>4</td>\n",
-       "      <td>56.142403</td>\n",
-       "      <td>Tanker</td>\n",
-       "      <td>Redezvous</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3116.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>96.627624</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>MTV</td>\n",
+       "      <td>3100.0</td>\n",
+       "      <td>HAB</td>\n",
        "      <td>Countdown</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>96.627624</td>\n",
+       "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>27.165012</td>\n",
-       "      <td>Tanker</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3450.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>SEP-02 + EOI-MCPS</td>\n",
        "      <td>Countdown</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -114,28 +114,28 @@
        "</div>"
       ],
       "text/plain": [
-       "   replicant  outcome   duration  anomaly_count  anomaly_time anomaly_vehicle  \\\n",
-       "0          5    False  56.142403              2      6.000000          Tanker   \n",
-       "1          5    False  56.142403              3     43.665012          Tanker   \n",
-       "2          5    False  56.142403              4     56.142403          Tanker   \n",
-       "3          2     True  96.627624              2      0.000000             MTV   \n",
-       "4          2     True  96.627624              3     27.165012          Tanker   \n",
+       "   replicant  outcome  duration  anomaly_count  anomaly_time  \\\n",
+       "0          2    False       4.0              2           4.0   \n",
+       "1          1    False    3111.0              2        3111.0   \n",
+       "2          0    False    3116.0              2        3100.0   \n",
+       "3          3     True    3450.0              0           NaN   \n",
+       "4          7    False       1.0              2           1.0   \n",
        "\n",
-       "  anomaly_activity  \n",
-       "0        Countdown  \n",
-       "1        Countdown  \n",
-       "2        Redezvous  \n",
-       "3        Countdown  \n",
-       "4        Countdown  "
+       "     anomaly_vehicle anomaly_activity  \n",
+       "0  SEP-02 + EOI-MCPS           Ascent  \n",
+       "1           MOI-MCPS  Lunar Insertion  \n",
+       "2                HAB        Countdown  \n",
+       "3                NaN              NaN  \n",
+       "4  SEP-02 + EOI-MCPS        Countdown  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_dir = Path.cwd().parent.parent / \"results\" / \"Case04-r05__Tx10-Tk08\"\n",
+    "data_dir = Path.cwd().parent.parent / \"results\" / \"test-05\"\n",
     "\n",
     "mc_results = pd.read_csv(data_dir / \"mc.csv\")\n",
     "mc_results.head()"
@@ -143,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The success rate was: 0.8698116352725455 = 86.981 %\n",
+      "The success rate was: 0.5735735735735735 = 57.357 %\n",
       "\n"
      ]
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,33 +178,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Replicants</th>\n",
+       "      <th>Success Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>0.571429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>7</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>8</td>\n",
+       "      <td>0.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>9</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.454545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>12</td>\n",
+       "      <td>0.538462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>13</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>14</td>\n",
+       "      <td>0.533333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>15</td>\n",
+       "      <td>0.562500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0.529412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>17</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>18</td>\n",
+       "      <td>0.526316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0.476190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>21</td>\n",
+       "      <td>0.454545</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Replicants  Success Rate\n",
+       "0            2      0.000000\n",
+       "1            3      0.250000\n",
+       "2            4      0.400000\n",
+       "3            5      0.500000\n",
+       "4            6      0.571429\n",
+       "5            7      0.500000\n",
+       "6            8      0.444444\n",
+       "7            9      0.500000\n",
+       "8           10      0.454545\n",
+       "9           11      0.500000\n",
+       "10          12      0.538462\n",
+       "11          13      0.500000\n",
+       "12          14      0.533333\n",
+       "13          15      0.562500\n",
+       "14          16      0.529412\n",
+       "15          17      0.500000\n",
+       "16          18      0.526316\n",
+       "17          19      0.500000\n",
+       "18          20      0.476190\n",
+       "19          21      0.454545"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.DataFrame({\n",
     "    \"Replicants\": replicants,\n",
     "    \"Success Rate\": rates\n",
     "})\n",
-    "# df.head(20)"
+    "df.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-182627c51f7a4ffe80da0d87420549de\"></div>\n",
+       "<div id=\"altair-viz-a19c38752bfd48f58849fffbcc742538\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-182627c51f7a4ffe80da0d87420549de\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-182627c51f7a4ffe80da0d87420549de\");\n",
+       "    if (outputDiv.id !== \"altair-viz-a19c38752bfd48f58849fffbcc742538\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-a19c38752bfd48f58849fffbcc742538\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -250,22 +409,22 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"url\": \"http://localhost:15397/b42c233d9c833e712e6162acd8e38328.json\"}, \"mark\": \"line\", \"encoding\": {\"x\": {\"field\": \"Replicants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"Success Rate\", \"scale\": {\"domain\": [0.8, 0.9]}, \"type\": \"quantitative\"}}, \"height\": 300, \"width\": 800, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\"}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"url\": \"http://localhost:21092/75bb1fc5813077c7943140624ee88c91.json\"}, \"mark\": \"line\", \"encoding\": {\"x\": {\"field\": \"Replicants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"Success Rate\", \"scale\": {\"domain\": [0.4, 0.6]}, \"type\": \"quantitative\"}}, \"height\": 300, \"width\": 800, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\"}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "alt.Chart(df).mark_line().encode(\n",
-    "    x = alt.X(\"Replicants\"),\n",
-    "    y = alt.Y(\"Success Rate\", scale=alt.Scale(domain=(0.8, 0.9)))\n",
+    "    x = alt.X(\"Replicants\", ),\n",
+    "    y = alt.Y(\"Success Rate\", scale=alt.Scale(domain=(0.4, 0.6)))\n",
     ").properties(\n",
     "    height = 300,\n",
     "    width=800\n",
